<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/primaryBackground"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.add.AddStoryActivity"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:paddingHorizontal="20dp"
        >
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="240dp"
            app:cardCornerRadius="40dp"
            android:backgroundTint="@color/grey"
            >
            <ImageView
                android:id="@+id/imagePreview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/empty_image"
                android:contentDescription="@string/image"
                />
        </androidx.cardview.widget.CardView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            >
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_gallery"
                android:layout_width="160dp"
                android:layout_height="50dp"
                android:text="@string/gallery"
                android:backgroundTint="@color/orange"
                android:background="@drawable/button_background"
                android:textColor="@color/white" />
            <Space
                android:layout_width="20dp"
                android:layout_height="match_parent"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_camera"
                android:layout_width="160dp"
                android:layout_height="50dp"
                android:text="@string/camera"
                android:backgroundTint="@color/orange"
                android:textColor="@color/white"
                android:background="@drawable/button_background" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:id="@+id/descriptionTextfieldLayout"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/description_content" />

            <EditText
                android:layout_width="match_parent"
                android:id="@+id/ed_description"
                android:layout_marginTop="16dp"
                android:drawablePadding="16dp"
                android:lines="8"
                android:paddingHorizontal="16dp"
                android:gravity="top|start"
                android:scrollbars="vertical"
                android:paddingTop="10dp"
                android:layout_height="wrap_content"
                android:textColor="?attr/color"
                android:hint="@string/fill_the_description_here"
                android:inputType="textMultiLine"
                android:background="@drawable/rounded_background"
                android:autofillHints="">
            </EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <CheckBox
                android:id="@+id/button_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_your_location"
                />
            <fragment xmlns:map="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:visibility="gone"
                />
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_marginVertical="16dp"
            android:id="@+id/button_add"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/upload"
            android:backgroundTint="@color/orange"
            android:background="@drawable/button_background"
            android:textColor="@color/white" />
    </LinearLayout>
</ScrollView>
