<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    style="@style/primaryBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsActivity"
    android:padding="30dp"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textColor="?attr/colorPrimary"
        android:textAlignment="center"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_marginBottom="12dp"
        />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        style="@style/cardViewContainerBackground"
        android:layout_marginBottom="12dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp"
            android:gravity="start"
            >
            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchLanguage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="?attr/colorPrimary"
                android:textSize="20sp"
                android:text="@string/language"
                app:thumbTint="@color/orange"
                app:trackTint="@color/grey"
                />
            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchDarkMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="?attr/colorPrimary"
                android:textSize="20sp"
                android:text="@string/darkmode"
                app:thumbTint="@color/orange"
                app:trackTint="@color/grey"
                />
        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <Button
        android:id="@+id/action_logout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:text="@string/logout"
        android:backgroundTint="@color/red"
        />
</LinearLayout>