<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/primaryBackground"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="24dp"
        tools:context=".ui.login.LoginActivity"
        >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorPrimary"
            android:layout_marginTop="50dp"
            android:text="@string/register"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:id="@+id/usernameTextfieldLayout"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:layout_editor_absoluteX="0dp"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorPrimary"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/username" />

            <EditText
                android:id="@+id/ed_register_name"
                android:layout_width="match_parent"
                android:layout_marginTop="16dp"
                android:drawablePadding="16dp"
                android:drawableStart="@drawable/outline_account_circle_24"
                android:paddingHorizontal="16dp"
                android:layout_height="60dp"
                android:hint="@string/your_username"
                android:inputType="text"
                android:background="@drawable/rounded_background"
                android:autofillHints="" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:id="@+id/emailTextfieldLayout"
            app:layout_constraintTop_toBottomOf="@+id/usernameTextfieldLayout"
            tools:layout_editor_absoluteX="0dp"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="?attr/colorPrimary"
                android:textSize="20sp"
                android:text="@string/email" />

            <EditText
                android:id="@+id/ed_register_email"
                android:layout_width="match_parent"
                android:layout_marginTop="16dp"
                android:drawablePadding="16dp"
                android:drawableStart="@drawable/baseline_mail_outline_24"
                android:paddingHorizontal="16dp"
                android:layout_height="60dp"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:background="@drawable/rounded_background"
                android:autofillHints="" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/passwordTextfieldLayout"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/emailTextfieldLayout"
            tools:layout_editor_absoluteX="0dp"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="20sp"
                    android:text="@string/password" />
            </LinearLayout>
            <com.dicoding.storyapp.component.MyEditText
                android:layout_width="match_parent"
                android:id="@+id/ed_register_password"
                android:layout_marginTop="16dp"
                android:drawablePadding="16dp"
                android:paddingHorizontal="16dp"
                android:layout_height="60dp"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:background="@drawable/rounded_background"
                android:autofillHints=""
                >
            </com.dicoding.storyapp.component.MyEditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/passwordTextfieldLayout"
            android:orientation="vertical"
            >
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/registerButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/register"
                android:textColor="@color/white"
                android:background="@drawable/button_rounded"
                android:backgroundTint="@color/orange"
                android:textSize="20sp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:gravity="center"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/colorPrimary"
                    android:text="@string/already_have_an_account"
                    android:textSize="16sp"
                    />
                <TextView
                    android:id="@+id/hyperlink_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:text="@string/login_here"
                    android:textSize="16sp"
                    android:textColor="@color/orange"
                    android:textStyle="bold"
                    />
            </LinearLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
