<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/primaryBackground"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            >
            <include layout="@layout/activity_detail_shimmer"/>
        </com.facebook.shimmer.ShimmerFrameLayout>

        <LinearLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:paddingHorizontal="20dp"
            tools:context=".ui.detail.DetailStoryActivity">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="20dp"
                >
                <ImageView
                    android:id="@+id/imageViewStory"
                    android:transitionName="profile"
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:src="@drawable/empty_image"
                    android:scaleType="centerCrop"
                    android:background="@drawable/rounded_background"
                    android:contentDescription="@string/image"
                    />
            </androidx.cardview.widget.CardView>
            <TextView
                android:id="@+id/textViewTitle"
                android:transitionName="name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="?attr/colorPrimary"
                android:layout_marginTop="10dp"
                />
            <TextView
                android:id="@+id/textViewDescription"
                android:transitionName="description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:layout_marginTop="4dp"
                android:textColor="?attr/colorPrimary"
                android:ellipsize="end"
                android:lines="2"
                android:textSize="14sp"
                />
        </LinearLayout>
    </LinearLayout>

</ScrollView>
